# polisygnal

./: .env.example  .gitignore  .vercelignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_market_classification.py  0003_add_sources_and_evidence_items.py  0004_predictions.py  0005_market_outcomes.py  (+20 more)
apps/api/app/: __init__.py  main.py
apps/api/tests/: conftest.py  test_analysis_readiness.py  test_backtesting.py  test_briefing.py  test_briefing_artifacts_api.py  test_codex_agent_research.py  test_config.py  test_controlled_metadata_refresh.py  test_controlled_snapshot_refresh.py  test_copy_trading.py  test_copy_trading_worker.py  test_daily_briefing.py  test_dashboard_artifact.py  test_dashboard_html_api.py  test_data_health.py  test_database_config.py  test_diff_api.py  test_discovery_snapshots.py  test_evidence_pipeline.py  test_evidence_reconciliation.py  test_external_market_matching.py  test_external_market_signals.py  test_health.py  test_highlighted_profiles.py  test_identifier_backfill.py  test_inspect_soccer_market_health_command.py  test_investigation_status.py  test_kalshi_market_signals.py  test_linear_auth.py  test_linear_sync.py  test_live_market_import.py  test_live_upcoming_discovery.py  test_manual_evidence.py  test_market_analysis.py  test_market_decisions.py  test_market_detail.py  test_market_diff.py  test_market_evaluation.py  test_market_evidence.py  test_market_freshness.py  (+41 more)
(+479 files in other folders)
